# dismod_mr_migrated

./: .gitignore  main.py  pyproject.toml  setup.py  transform_pop_df.py
attached_assets/: Pasted-Collecting-numpy-2-0-Using-cached-numpy-1-26-4-cp311-cp311-manylinux-2-17-x86-64-manylinux2014-x86-1747948865692.txt  Pasted-import-numpy-as-np-import-scipy-interpolate-import-pymc-as-pm-import-dismod-mr-from-process-import--1747944264336.txt
dismod_mr/: __about__.py  data.py  enums.py  fit.py  plot.py
dismod_mr_pymc5/: __init__.py  data.py  fit.py  plot.py
dismod_mr_pymc5_testing/: amd_sim_data.ipynb  amd_sim_data_dup_data.ipynb  test0.py  test1.py  test2.py  test3.py  test4.py  test41.py  test41_output  test4_output  test5.py  test_asr_pymc5.py
examples/: amd_sim_data.ipynb  bdd_sim_data.ipynb  few_data_types.ipynb  ocd_sim_data.ipynb  ocd_sim_data_wo_dsm5.ipynb  pd_sim_data.ipynb  prevalence_asr_original.xlsx  prevalence_asr_original_V3.xlsx  prevalence_asr_wo_dsm5.xlsx  prevalence_asr_wo_dsm5_V2.xlsx  prevalence_by_age.xlsx  req.yaml
python_template.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
reforged_mr/: amd_on_notebook.ipynb  amd_on_notebook_origin.ipynb  amd_on_notebook_proof1.ipynb  amd_on_notebook_proof2.ipynb  amd_on_notebook_proof3.ipynb  demo.ipynb  demo_all_metropolis_with_cov.ipynb  demo_all_metropolis_without_cov.ipynb  demo_dry_metropolis_without_cov.ipynb  demo_ear_metropolis_without_cov.ipynb  demo_int_metropolis_without_cov.ipynb  demo_int_nuts_without_cov.ipynb  demo_int_nuts_without_cov2.ipynb  demo_metropolis_with_cov.ipynb  (+12 more)
(+59 files in other folders)
