[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "you@example.com"}
]
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.4.2",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pymc>=5.22.0",
    "scipy>=1.15.3",
]
